# csci570_finalProj

./: .gitignore  CMakeLists.txt  README.md
src/: CSequenceAligner.cpp  CSequenceAligner.h  CUtils.cpp  CUtils.h  TestClass.cpp  TestClass.h  basic.cpp  basic.sh  basic_linux.cpp  efficient.cpp  efficient.sh  efficient_linux.cpp  main.cpp
